--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           try{
             var taxonId = parseInt(part.match(patt)[0])
             if(taxonId != null){
-              return String(taxonId);
+              return taxonId;
             }
           }catch (err) {
           }
