--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Pandora</title>
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="{{page.url}}/main.css" />
     <!--<link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.min.css"
