--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Pandora</title>
-    <link rel="stylesheet" href="{{page.url}}/main.css" />
+    <link rel="stylesheet" href="https://jomiq.github.io/pandora_test/main.css" />
     <!--<link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.min.css"
@@ -42,8 +42,8 @@
       </div>
     </main>
 
-    <script src="/particles.js"></script>
-    <script src="/autocomplete.js"></script>
+    <script src="https://jomiq.github.io/pandora_test/particles.js"></script>
+    <script src="https://jomiq.github.io/pandora_test/autocomplete.js"></script>
     <script>
       const get_list = () => {
         const parts = document.querySelector("#autoComplete").value.split(",");
