hardcode image also

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container">
         <img
           style="opacity: 75%;"
-          src="/pandora.png"
+          src="https://jomiq.github.io/pandora_test/pandora.png"
         />
         <hr />
         <div class="center">
